--- a/css/styles.css
+++ b/css/styles.css
@@ -139,4 +139,241 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  background-color: #eeeeee;
+}
+
+.main-image {
+  background-image: url("/img/main-img.png");
+  padding: 42px 40px;
+  width: 100%;
+  height: 860px;
+  background-size: cover;
+  position: relative;
+  margin-bottom: 140px;
+}
+
+.navbar, .header, .profile, .phone {
+  display: flex;
+  align-items: center;
+}
+
+.header {
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 20px 40px;
+  background-color: #ffffff;
+  border-radius: 80px;
+}
+
+.dropbtn {
+  background-color: #ffffff;
+  color: #ffffff;
+  padding: 0 25px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.text-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.heading-primary {
+  color: #1F4B43;
+  text-transform: uppercase;
+  margin-bottom: 60px;
+}
+
+.heading-primary-main {
+  display: block;
+  font-size: 60px;
+  line-height: 60px;
+  font-weight: 700;
+  letter-spacing: 5.5px;
+}
+
+.heading-primary-sub {
+  display: block;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 8px;
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: none;
+  padding: 26px 30px;
+  border-radius: 80px;
+  color: #9DBFAF;
+}
+
+.searchButton {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  border: none;
+  background: #E7C873;
+  border-radius: 80px;
+  cursor: pointer;
+  top: 50%;
+  right: 5px;
+  transform: translate(0, -50%);
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #ffffff;
+}
+
+.inline-description, .description-properties {
+  display: flex;
+}
+
+h2 {
+  font-size: 40px;
+  line-height: 52px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.row-widgets {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+}
+
+.column-widgets {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.widget {
+  position: relative;
+  background-color: #ffffff;
+  width: 520px;
+  height: 520px;
+  border-radius: 12px;
+}
+
+.image-background {
+  background-image: url(/img/widget1-1.png);
+  background-size: cover;
+  width: 520px;
+  height: 420px;
+  border-radius: 12px 12px 0 0;
+}
+
+.widget-description {
+  background-color: #ffffff;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  position: absolute;
+  width: 470px;
+  height: 140px;
+  padding: 25px;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.description-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.location, .bedrooms, .bathrooms, .square {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.widget-title {
+  font-size: 20px;
+  line-height: 22px;
+  font-weight: 500;
+  color: #1A1A1A;
+  margin-bottom: 20px;
+}
+
+.location p {
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 400;
+  color: #1A1A1A;
+}
+
+.price p {
+  font-size: 21px;
+  line-height: 30px;
+  font-weight: 600;
+  color: #EB664E;
+}
+
+.specification {
+  display: flex;
+  justify-content: end;
+  gap: 30px;
+}
+
+.specification p {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #1A1A1A;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+}
+
+.link-button {
+  background-color: #E7C873;
+  border: none;
+  border-radius: 80px;
+  width: 210px;
+  height: 64px;
+  color: #1A1A1A;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 54px;
 }/*# sourceMappingURL=styles.css.map */
