--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,328 @@ a {
   box-sizing: border-box;
 }
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.footer-background {
+  background-color: #1F4B43;
+  padding: 56px 120px;
+}
+.footer-background .footer-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: space-between;
+  gap: 50px;
+  max-width: 1700px;
+  margin: 0 auto;
+}
+.footer-background .footer-main .footer-top-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-background .footer-main .footer-top-block .footer-social-network {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 34px;
+  color: #ffffff;
+}
+.footer-background .footer-main .footer-top-block .footer-social-network .social-network-icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+.footer-background .footer-main .horizontal-line {
+  background-color: rgba(255, 255, 255, 0.1176470588);
+  width: 100%;
+  height: 1px;
+}
+.footer-background .footer-main .footer-mid-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 50px;
+}
+.footer-background .footer-main .footer-mid-row .footer-navigation {
+  width: 170px;
+}
+.footer-background .footer-main .footer-mid-row .footer-navigation ul,
+.footer-background .footer-main .footer-mid-row .footer-navigation a {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-family: "Roboto";
+  font-weight: 300;
+  line-height: 28px;
+  font-size: 15px;
+  color: #ffffff;
+  letter-spacing: normal;
+  gap: 10px;
+}
+.footer-background .footer-main .footer-mid-row .footer-nav-title {
+  font-family: "Roboto";
+  font-weight: 500;
+  line-height: 22px;
+  font-size: 20px;
+  color: rgba(255, 255, 255, 0.4705882353);
+  letter-spacing: normal;
+  margin-bottom: 30px;
+}
+.footer-background .footer-main .footer-mid-row .app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.footer-background .footer-main .footer-mid-row .app .get-app {
+  background-color: rgba(255, 255, 255, 0.1176470588);
+  width: 220px;
+  border-radius: 12px;
+}
+.footer-background .footer-main .footer-mid-row .app .get-app .get-app-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 20px 25px;
+  gap: 15px;
+}
+.footer-background .footer-main .footer-mid-row .app .get-app .get-app-content .vertical-line {
+  background-color: #ffffff;
+  width: 1px;
+  height: 38px;
+}
+.footer-background .footer-main .footer-mid-row .app .get-app .get-app-content p:first-child {
+  font-family: "Roboto";
+  font-weight: 400;
+  line-height: 16px;
+  font-size: 12px;
+  color: #ffffff;
+  letter-spacing: normal;
+  margin-bottom: 4px;
+}
+.footer-background .footer-main .footer-mid-row .app .get-app .get-app-content p:last-child {
+  font-family: "Roboto";
+  font-weight: 500;
+  line-height: 20px;
+  font-size: 15px;
+  color: #ffffff;
+  letter-spacing: normal;
+}
+.footer-background .footer-main .footer-mid-row .subscribe-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: space-between;
+  gap: 15px;
+}
+.footer-background .footer-main .footer-mid-row .subscribe-content p {
+  font-family: "Roboto";
+  font-weight: 400;
+  line-height: 28px;
+  font-size: 16px;
+  color: #ffffff;
+  letter-spacing: normal;
+}
+.footer-background .footer-main .footer-mid-row .subscribe-content .email {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-background .footer-main .footer-mid-row .subscribe-content .email .emailInput {
+  background-color: #1F4B43;
+  border: none;
+  outline: none;
+  color: #ffffff;
+}
+.footer-background .footer-main .footer-mid-row .subscribe-content .email .emailInput::-moz-placeholder {
+  color: #ffffff;
+}
+.footer-background .footer-main .footer-mid-row .subscribe-content .email .emailInput::placeholder {
+  color: #ffffff;
+}
+.footer-background .footer-main .footer-mid-row .subscribe-content .email .mail-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.1176470588);
+  color: #ffffff;
+  font-weight: 500;
+  cursor: pointer;
+  line-height: 54px;
+  border: none;
+  border-radius: 44px;
+  font-size: 16px;
+  transition: background-color 0.4s;
+  padding: 8px 30px;
+  width: 118px;
+  height: 42px;
+}
+.footer-background .footer-main .footer-mid-row .subscribe-content .email .mail-button:hover {
+  background-color: #1A1A1A;
+  color: #ffffff;
+}
+.footer-background .footer-main .footer-bottom-row p {
+  font-family: "Roboto";
+  font-weight: 400;
+  line-height: 28px;
+  font-size: 16px;
+  color: #ffffff;
+  letter-spacing: normal;
+  text-align: center;
+}
+
 body {
   background-color: #eeeeee;
 }
@@ -369,7 +691,10 @@ body main .row-widgets .widget .widget-description .widget-title {
   letter-spacing: normal;
   margin-bottom: 20px;
 }
-body main .row-widgets .widget .widget-description .location, body main .row-widgets .widget .widget-description .bedrooms, body main .row-widgets .widget .widget-description .bathrooms, body main .row-widgets .widget .widget-description .square {
+body main .row-widgets .widget .widget-description .location,
+body main .row-widgets .widget .widget-description .bedrooms,
+body main .row-widgets .widget .widget-description .bathrooms,
+body main .row-widgets .widget .widget-description .square {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -807,183 +1132,6 @@ body main .markets-section .markets-address .address-button:hover {
   background-color: #1A1A1A;
   color: #ffffff;
 }
-body .footer-background {
-  background-color: #1F4B43;
-  padding: 56px 120px;
-}
-body .footer-background .footer-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: space-between;
-  gap: 50px;
-  max-width: 1700px;
-  margin: 0 auto;
-}
-body .footer-background .footer-main .footer-top-block {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-body .footer-background .footer-main .footer-top-block .footer-social-network {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 34px;
-  color: #ffffff;
-}
-body .footer-background .footer-main .footer-top-block .footer-social-network .social-network-icon {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 25px;
-}
-body .footer-background .footer-main .horizontal-line {
-  background-color: rgba(255, 255, 255, 0.1176470588);
-  width: 100%;
-  height: 1px;
-}
-body .footer-background .footer-main .footer-mid-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 50px;
-}
-body .footer-background .footer-main .footer-mid-row .footer-navigation {
-  width: 170px;
-}
-body .footer-background .footer-main .footer-mid-row .footer-navigation ul, body .footer-background .footer-main .footer-mid-row .footer-navigation a {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  font-family: "Roboto";
-  font-weight: 300;
-  line-height: 28px;
-  font-size: 15px;
-  color: #ffffff;
-  letter-spacing: normal;
-  gap: 10px;
-}
-body .footer-background .footer-main .footer-mid-row .footer-nav-title {
-  font-family: "Roboto";
-  font-weight: 500;
-  line-height: 22px;
-  font-size: 20px;
-  color: rgba(255, 255, 255, 0.4705882353);
-  letter-spacing: normal;
-  margin-bottom: 30px;
-}
-body .footer-background .footer-main .footer-mid-row .app {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-body .footer-background .footer-main .footer-mid-row .app .get-app {
-  background-color: rgba(255, 255, 255, 0.1176470588);
-  width: 220px;
-  border-radius: 12px;
-}
-body .footer-background .footer-main .footer-mid-row .app .get-app .get-app-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 20px 25px;
-  gap: 15px;
-}
-body .footer-background .footer-main .footer-mid-row .app .get-app .get-app-content .vertical-line {
-  background-color: #ffffff;
-  width: 1px;
-  height: 38px;
-}
-body .footer-background .footer-main .footer-mid-row .app .get-app .get-app-content p:first-child {
-  font-family: "Roboto";
-  font-weight: 400;
-  line-height: 16px;
-  font-size: 12px;
-  color: #ffffff;
-  letter-spacing: normal;
-  margin-bottom: 4px;
-}
-body .footer-background .footer-main .footer-mid-row .app .get-app .get-app-content p:last-child {
-  font-family: "Roboto";
-  font-weight: 500;
-  line-height: 20px;
-  font-size: 15px;
-  color: #ffffff;
-  letter-spacing: normal;
-}
-body .footer-background .footer-main .footer-mid-row .subscribe-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: space-between;
-  gap: 15px;
-}
-body .footer-background .footer-main .footer-mid-row .subscribe-content p {
-  font-family: "Roboto";
-  font-weight: 400;
-  line-height: 28px;
-  font-size: 16px;
-  color: #ffffff;
-  letter-spacing: normal;
-}
-body .footer-background .footer-main .footer-mid-row .subscribe-content .email {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-body .footer-background .footer-main .footer-mid-row .subscribe-content .email .emailInput {
-  background-color: #1F4B43;
-  border: none;
-  outline: none;
-  color: #ffffff;
-}
-body .footer-background .footer-main .footer-mid-row .subscribe-content .email .emailInput .emailInput::-moz-placeholder {
-  color: #ffffff;
-}
-body .footer-background .footer-main .footer-mid-row .subscribe-content .email .emailInput .emailInput::placeholder {
-  color: #ffffff;
-}
-body .footer-background .footer-main .footer-mid-row .subscribe-content .email .mail-button {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0.1176470588);
-  color: #ffffff;
-  font-weight: 500;
-  cursor: pointer;
-  line-height: 54px;
-  border: none;
-  border-radius: 44px;
-  font-size: 16px;
-  transition: background-color 0.4s;
-  padding: 8px 30px;
-  width: 118px;
-  height: 42px;
-}
-body .footer-background .footer-main .footer-mid-row .subscribe-content .email .mail-button:hover {
-  background-color: #1A1A1A;
-  color: #ffffff;
-}
-body .footer-background .footer-main .footer-bottom-row p {
-  font-family: "Roboto";
-  font-weight: 400;
-  line-height: 28px;
-  font-size: 16px;
-  color: #ffffff;
-  letter-spacing: normal;
-  text-align: center;
-}
 body .total-clients p:first-child {
   font-family: "Roboto";
   font-weight: 400;
@@ -1020,4 +1168,14 @@ body .widget-btn {
 body .widget-btn:hover {
   background-color: #ffffff;
   color: #1A1A1A;
+}
+body .iframe-footer-conteiner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+}
+body .iframe-footer-conteiner .iframe-footer {
+  width: 100%;
+  height: 709px;
 }/*# sourceMappingURL=styles.css.map */
