--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $color-primary: #1A1A1A;
 $color-secondary: #1F4B43;
+$color-background-section: #2D3A4F;
 $color-accent: #E7C873;
 $color-background: #eeeeee;
 $color-white: #ffffff;
@@ -28,3 +29,4 @@ $spacing-xl: 40px;
 
 // Border
 $border-solid: 1px solid $color-primary;
+
