--- a/scss/listings.scss
+++ b/scss/listings.scss
@@ -38,7 +38,7 @@
 
 .cities-section {
     @include flex-center(column, center, center);
-    gap: 15px;
+    gap: 50px;
 
     .cities-title {
         @include flex-center(column, center, center);
@@ -55,8 +55,9 @@
     }
 
     .cities-widgets {
-        @include flex-center(row, center, center);
-        gap: 5px;
+        @include flex-center(row, space-between, space-between);
+        gap: 40px;
+        flex-wrap: wrap;
 
         .cities-widget {
             background-image: url("/img/new-york.png");
@@ -76,3 +77,121 @@
         }
     }
 }
+
+.slider-navigation {
+    @include flex-center(row, flex-start, flex-start);
+    width: 100%;
+    gap: 20px;
+
+    .arrow-icon {
+        background-color: $color-white;
+        @include flex-center(row, center, center);
+        border: 1px solid $color-light-grey;
+        width: 60px;
+        height: 40px;
+        border-radius: 40px;
+    }
+}
+
+.properties-section {
+    background-color: $color-background-section;
+    width: 100%;
+    padding: 170px 260px;
+    @include flex-center(column, center, center);
+
+    .properties-content {
+        @include flex-center(column, center, center);
+        gap: 40px;
+
+        .properties-title h2{
+            @include font-style (500, 52px, $font-size-xlarge, $color-white);
+            text-align: center;
+        }
+
+        .properties-title p{
+            @include font-style (400, 52px, $font-size-medium, $color-white);
+            text-align: center;
+        }
+
+        .properties-widgets {
+            @include flex-center(row, center, center);
+            gap: 32px;
+
+            .properties-left-widget {
+                @include flex-center(column, space-between, flex-start);
+                padding: 40px;
+                width: 680px;
+                height: 700px;
+                background-color: $color-light-grey;
+                background-image: url();
+
+                .sale-featured {
+                    @include flex-center(row, flex-start, center);
+                    gap: 10px;
+
+                    .for-sale {
+                        background-color: $color-secondary;
+                        border-radius: 33px;
+                        padding: 2px 15px;
+    
+                        p {
+                            @include font-style (500, 33px, $font-size-small, $color-white);  
+                        }
+                    }
+
+                    .featured {
+                        background-color: $color-accent;
+                        border-radius: 33px;
+                        padding: 2px 15px;
+    
+                        p {
+                            @include font-style (500, 33px, $font-size-small, $color-primary);  
+                        }
+                    }
+                }
+                .left-widget-description {
+                    @include flex-center(column, center, space-between);
+                    gap: 20px;
+
+                    .left-widget-title {
+                        @include font-style (500, 32px, $font-size-xlarge, $color-white);
+                    }
+
+                    .left-widget-location {
+                        @include flex-center(row, flex-start, center);
+                        @include font-style (500, 30px, $font-size-small, $color-white);
+                        gap: 10px;
+                    }
+
+                    .left-widget-description {
+                        @include flex-center(row, flex-start, center);
+                        gap: 60px;
+
+                        p {
+                            @include font-style (600, 30px, $font-size-large, $color-white);
+                        }
+
+                        .widget-properties-description {
+                            @include flex-center(row, flex-start, center);
+                            gap: 30px;
+
+                            .rooms-description {
+                                @include flex-center(row, flex-start, center);
+                                gap: 10px;
+
+                                p {
+                                    @include font-style (400, 18px, $font-size-medium, $color-white);
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
