--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -141,10 +141,23 @@ body {
       @include flex-center(column, center, center);
       gap: 40px;
 
+
+      .categories-header {
+        @include flex-center(row, space-between, center);
+        width: 1640px;
+
+        .categories-title {
+          @include flex-center(column, center, flex-start);
+          gap: 5px;
+        }
+      }
       h2 {
         @include font-style (500, 52px, $font-size-xlarge, $color-primary);
         text-align: center;
-        margin-bottom: 50px;
+      }
+
+      p {
+        @include font-style (500, 52px, $font-size-medium, $color-primary);
       }
     }
 
