--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,6 +11,7 @@ $color-border: #FFFFFF1A;
 $color-line: #ffffff1e;
 $color-price: #EB664E;
 $color-footer-nav: #FFFFFF78;
+$color-button-bg: #1A1A1A1C;
 
 // Font-size
 $font-size-small: 15px;
