--- a/css/styles.css
+++ b/css/styles.css
@@ -626,7 +626,9 @@ body main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 200px;
+}
+body main section {
+  padding-bottom: 100px;
 }
 body main .column-widgets {
   display: flex;
@@ -1002,14 +1004,14 @@ body main .steps-section .steps-right-block .finding-steps-description p:last-ch
   letter-spacing: normal;
   width: 310px;
 }
-body main .news-content {
+body main .news-section .news-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 40px;
 }
-body main .news-content .news-title h2 {
+body main .news-section .news-content .news-title h2 {
   font-family: "Roboto";
   font-weight: 500;
   line-height: 52px;
@@ -1018,7 +1020,7 @@ body main .news-content .news-title h2 {
   letter-spacing: normal;
   margin-bottom: 5px;
 }
-body main .news-content .news-title p {
+body main .news-section .news-content .news-title p {
   font-family: "Roboto";
   font-weight: 400;
   line-height: 32px;
@@ -1026,14 +1028,14 @@ body main .news-content .news-title p {
   color: #3D3E3F;
   letter-spacing: normal;
 }
-body main .news-content .news-widgets-row {
+body main .news-section .news-content .news-widgets-row {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 30px;
 }
-body main .news-content .news-widgets-row .news-widget {
+body main .news-section .news-content .news-widgets-row .news-widget {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1043,7 +1045,7 @@ body main .news-content .news-widgets-row .news-widget {
   border-radius: 18px;
   padding-bottom: 30px;
 }
-body main .news-content .news-widgets-row .news-widget .news-widget-image {
+body main .news-section .news-content .news-widgets-row .news-widget .news-widget-image {
   background-image: url(/img/news-widget1-1.png);
   width: 100%;
   height: 218px;
@@ -1051,7 +1053,7 @@ body main .news-content .news-widgets-row .news-widget .news-widget-image {
   background-size: cover;
   margin-bottom: 20px;
 }
-body main .news-content .news-widgets-row .news-widget .news-widget-date {
+body main .news-section .news-content .news-widgets-row .news-widget .news-widget-date {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -1065,13 +1067,13 @@ body main .news-content .news-widgets-row .news-widget .news-widget-date {
   margin-bottom: 10px;
   gap: 8px;
 }
-body main .news-content .news-widgets-row .news-widget .news-widget-date .news-widget-dot {
+body main .news-section .news-content .news-widgets-row .news-widget .news-widget-date .news-widget-dot {
   width: 4px;
   height: 4px;
   border-radius: 4px;
   background-color: #1A1A1A;
 }
-body main .news-content .news-widgets-row .news-widget .news-widget-description p {
+body main .news-section .news-content .news-widgets-row .news-widget .news-widget-description p {
   font-family: "Roboto";
   font-weight: 400;
   line-height: 26px;
@@ -1082,7 +1084,7 @@ body main .news-content .news-widgets-row .news-widget .news-widget-description 
   width: 240px;
   margin-bottom: 15px;
 }
-body main .news-content .news-widgets-row .news-widget .widget-btn {
+body main .news-section .news-content .news-widgets-row .news-widget .widget-btn {
   background-color: #E7C873;
   color: #1A1A1A;
   font-weight: 500;
@@ -1099,13 +1101,12 @@ body main .news-content .news-widgets-row .news-widget .widget-btn {
   gap: 20px;
   padding: 2px 50px;
 }
-body main .news-content .news-widgets-row .news-widget .widget-btn:hover {
+body main .news-section .news-content .news-widgets-row .news-widget .widget-btn:hover {
   background-color: #ffffff;
   color: #1A1A1A;
 }
 body main .markets-section {
   max-width: 1420px;
-  margin: 0 auto 100px auto;
 }
 body main .markets-section .markets-title h2 {
   font-family: "Roboto";
