--- a/scss/listings.scss
+++ b/scss/listings.scss
@@ -122,8 +122,8 @@
                 padding: 40px;
                 width: 680px;
                 height: 700px;
-                background-color: $color-light-grey;
-                background-image: url();
+                background-size: cover;
+                background-image: url("/img/left-widget-image.png");
 
                 .sale-featured {
                     @include flex-center(row, flex-start, center);
@@ -184,6 +184,90 @@
                                 }
                             }
                         }
+                    }
+                }
+            }
+
+            .properties-right-widgets {
+                @include flex-center(column, space-between, center);
+                width: 685px;
+                height: 700px;
+
+                .right-top-widget {
+                    background-image: url("/img/top-right-widget.png");
+                    @include flex-center(row, space-between, center);
+                    width: 100%;
+                    height: 335px;
+                    padding: 10px;
+
+                    .widget-slider {
+                        background-color: $color-button-bg;
+                        padding: 15px 30px;
+                        border-radius: 50px;
+                        backdrop-filter: blur(10px)
+                    }
+                }
+
+                .right-bottom-widget {
+                    @include flex-center(row, space-between, space-between);
+                    width: 100%;
+
+                    .bottom-left-widget {
+                        @include flex-center(row, center, center);
+                        background-image: url("/img/right-bottom-widget.png");
+                        background-size: cover;
+                        border-radius: 16px;
+                        width: 326px;
+                        height: 331px;
+
+                        .play-button {
+                            background-color: $color-button-bg;
+                            padding: 24px 25px;
+                            border-radius: 100%;
+                        }
+                    }
+
+                    .bottom-right-yellow {
+                        @include flex-center(column, space-between, space-between);
+                        background-color: $color-accent;
+                        border-radius: 16px;
+                        padding: 35px 40px;
+                        width: 326px;
+                        height: 331px;
+
+
+
+                        .bottom-right-yellow-description {
+                            @include flex-center(column, flex-start, flex-start);
+                            gap: 15px;
+
+                            .number-properties {
+                                @include font-style (600, 52px, $font-size-xlarge, $color-primary);
+                            }
+
+                            .properties-description {
+                                @include font-style (400, 28px, $font-size-small, $color-primary);
+                            }
+
+                            p {
+                                @include font-style (400, 34px, $font-size-large, $color-primary);
+                                width: 247px;
+                            }
+                            
+                        }
+                        .arrow-button {
+                            @include flex-center(column, flex-end, flex-end);
+
+
+                            .arrow-icon {
+                                @include flex-center(column, center, center);
+                                background-color: $color-white;
+                                border-radius: 100%;
+                                width: 50px;
+                                height: 50px;
+                            }
+                        }
+
                     }
                 }
             }
