--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -135,7 +135,10 @@ body {
 
   main {
     @include flex-center(column);
-    gap: 200px;
+
+    section {
+      padding-bottom: 100px
+    }
 
     .column-widgets {
       @include flex-center(column, center, center);
@@ -402,74 +405,79 @@ body {
       }
     }
 
-    .news-content {
-      @include flex-center(column, center, center);
-      gap: 40px;
+    .news-section {
 
-      .news-title h2 {
-        @include font-style (500, 52px, $font-size-xlarge, $color-primary);
-        margin-bottom: 5px;
-      }
 
-      .news-title p {
-        @include font-style (400, 32px, $font-size-medium, $color-grey);
-      }
-
-      .news-widgets-row {
-        @include flex-center(row, center);
-        gap: 30px;
-
-        .news-widget {
-          @include flex-center(column, center, center);
-          background-color: $color-light-grey;
-          width: 328px;
-          border-radius: 18px;
-          padding-bottom: 30px;
-
-          .news-widget-image {
-            background-image: url(/img/news-widget1-1.png);
-            width: 100%;
-            height: 218px;
+      .news-content {
+        @include flex-center(column, center, center);
+        gap: 40px;
+  
+        .news-title h2 {
+          @include font-style (500, 52px, $font-size-xlarge, $color-primary);
+          margin-bottom: 5px;
+        }
+  
+        .news-title p {
+          @include font-style (400, 32px, $font-size-medium, $color-grey);
+        }
+  
+        .news-widgets-row {
+          @include flex-center(row, center);
+          gap: 30px;
+  
+          .news-widget {
+            @include flex-center(column, center, center);
+            background-color: $color-light-grey;
+            width: 328px;
             border-radius: 18px;
-            background-size: cover;
-            margin-bottom: 20px;
-          }
-
-          .news-widget-date {
-            @include flex-center(row, center, center);
-            @include font-style (400, 28px, $font-size-small, $color-grey);
-            margin-bottom: 10px;
-            gap: 8px;
-
-            .news-widget-dot {
-              width: 4px;
-              height: 4px;
-              border-radius: 4px;
-              background-color: $color-primary;
+            padding-bottom: 30px;
+  
+            .news-widget-image {
+              background-image: url(/img/news-widget1-1.png);
+              width: 100%;
+              height: 218px;
+              border-radius: 18px;
+              background-size: cover;
+              margin-bottom: 20px;
             }
+  
+            .news-widget-date {
+              @include flex-center(row, center, center);
+              @include font-style (400, 28px, $font-size-small, $color-grey);
+              margin-bottom: 10px;
+              gap: 8px;
+  
+              .news-widget-dot {
+                width: 4px;
+                height: 4px;
+                border-radius: 4px;
+                background-color: $color-primary;
+              }
+            }
+  
+            .news-widget-description p {
+              @include font-style (400, 26px, $font-size-medium, $color-primary);
+              text-align: center;
+              width: 240px;
+              margin-bottom: 15px;
+            }
+  
+            .widget-btn {
+              @include button-style($color-accent, $color-primary, 18px, none, $font-size-small);
+              @include flex-center(row, center, center);
+              gap: 20px;
+              padding: 2px 50px;
+            }
+  
           }
-
-          .news-widget-description p {
-            @include font-style (400, 26px, $font-size-medium, $color-primary);
-            text-align: center;
-            width: 240px;
-            margin-bottom: 15px;
-          }
-
-          .widget-btn {
-            @include button-style($color-accent, $color-primary, 18px, none, $font-size-small);
-            @include flex-center(row, center, center);
-            gap: 20px;
-            padding: 2px 50px;
-          }
-
         }
       }
     }
 
+    
+
     .markets-section {
       max-width: 1420px;
-      margin: 0 auto 100px auto;
 
       .markets-title h2 {
         @include font-style (500, 52px, $font-size-xlarge, $color-primary);
